Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ body {
 }
 
 @media (max-width: 800px) {
+  body {
+    overflow-y: hidden;
+  }
   .inline {
     grid-template-columns: 1fr;
     width: min(100vw, 90vh);
